more work on portal, fix data grid form editor

--- a/git/formuladb-env/frmdb-apps/formuladb-io/_head.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/_head.html
@@ -25,4 +25,6 @@
 <link rel="stylesheet" href="./formuladb-look.css">
 <meta name="frmdb_display_date" content="">
 <style type="text/css">iframe#_hjRemoteVarsFrame {display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;}</style>
+<style type="text/css">iframe#_hjRemoteVarsFrame {display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;}</style>
+<style type="text/css">iframe#_hjRemoteVarsFrame {display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;}</style>
 </head>
