--- a/git/formuladb-env/frmdb-apps/formuladb-io/index.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/index.html
@@ -16,22 +16,58 @@
     <div data-frmdb-fragment="versions.html"></div>
     <header class="container-fluid frmdb-bg-2 frmdb-bg-1-primary-gradient frmdb-bg-2-circles" style="background-repeat: no-repeat, no-repeat; background-size: cover, cover;">
         <div data-frmdb-fragment="_nav.html"></div>
-        <div class="container py-lg-md d-flex">
-            <div class="col px-0">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <h1 class="text-white mt-5">
-                            Build Web Applications Without Coding
-                        </h1>
-                        <p class="lead text-white">Get started in minutes with our many examples, easy to customize and combine.
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 mb-5 pb-5">
+                    <h2 class="text-white mt-5">
+                        <small style="text-decoration: underline">for everyone:</small>
+                        <div>Build websites</div>
+                        <div>and web apps.</div>
+                        <div>Without Coding !</div>
+                    </h2>
+                    <p class="lead text-white">Get started in minutes with our many examples, easy to customize and combine.
                         </p>
-                        <div class="btn-wrapper">
-                            <a href="#EXAMPLES" class="btn btn-success btn-icon mb-3 mb-sm-0" style="text-transform: none">
+                    <div class="btn-wrapper">
+                        <a href="#EXAMPLES" class="btn btn-success btn-icon mb-3 mb-sm-0" style="text-transform: none">
                                 Try it now !</a>
-                        </div>
                     </div>
-                    <div class="col-lg-8">
-                        <img src="/formuladb-env/frmdb-apps/formuladb-io/static/images/header.svg" alt="FormulaDB - All in one digital transformation platform">
+                </div>
+                <div class="col-lg-7">
+                    <img src="/formuladb-env/frmdb-apps/formuladb-io/static/images/header.svg" alt="FormulaDB - All in one digital transformation platform" class="m-n4">
+                </div>
+                <div class="col-lg-2 mb-5 pb-5">
+                    <div>
+                        <small>
+                            <u class="text-white">for developers:</u>
+                        </small>
+                        <p>
+                            <small class="text-white">low-code unprecedented productivity
+                                <br>
+                            </small>
+                        </p>
+                        <div class="btn-wrapper"></div>
+                    </div>
+                    <div>
+                        <small>
+                            <u class="text-white">for web designers:</u>
+                        </small>
+                        <p>
+                            <small class="text-white">bring your designs to life as functional websites or apps
+                                <br>
+                            </small>
+                        </p>
+                        <div class="btn-wrapper"></div>
+                    </div>
+                    <div>
+                        <small>
+                            <u class="text-white">for managers:</u>
+                        </small>
+                        <p>
+                            <small class="text-white">get an edge with custom KPIs and dashboards unique to your business
+                                <br>
+                            </small>
+                        </p>
+                        <div class="btn-wrapper"></div>
                     </div>
                 </div>
             </div>
