more work on page listings

--- a/formuladb/editor-new-page-modal.html
+++ b/formuladb/editor-new-page-modal.html
@@ -68,6 +68,14 @@
                         </div>
                     </div>
 
+                    <div class="form-group row" data-key="href">
+                        <label class="col-sm-3 control-label">Featured Page Order</label>
+                        <div class="col-sm-9 input-group">
+                            <input name="frmdb_featured_page_order" data-frmdb-value="frmdb_featured_page_order" type="text" placeholder="none" class="form-control" value="none">
+                            <small class="form-text text-muted">System table $Page can be used to display a list of pages (e.g. list of blogs, articles). By default it is ordered by page name, use this field if you want different order.</small>
+                        </div>
+                    </div>
+
                     <div class="alert alert-danger" role="alert" style="display: none">
                         A simple danger alert—check it out!
                     </div>
