--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -35,8 +35,11 @@
             </div>
 
             <div class="btn-group mr-3" role="group">
-                <button class="btn btn-light" title="Save Page" id="save-btn">
+                <button class="btn btn-light" title="Save Page & Update App default look & feel" id="save-btn">
                     <i class="frmdb-i-save"></i>
+                </button>
+                <button class="btn btn-light" title="Save Page, don't update default app look & feel" id="save-btn-single-page">
+                    <i class="frmdb-i-607806-save"></i>
                 </button>
                 <a href="./index.html" target="_blank" class="btn btn-light" title="Go To App In Different tab" id="publish-btn" data-frmdb-action="saveApp">
                     <i class="frmdb-i-upload"></i>
