--- a/git/formuladb-env/frmdb-apps/formuladb-io/index.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
 </head>
-<body data-frmdb-tenant="frmdb-apps" data-frmdb-app="formuladb-io" class="frmdb-editor-normal">
+<body data-frmdb-tenant="frmdb-apps" data-frmdb-app="formuladb-io" class="frmdb-editor-preview">
     <style>
         .section#app-list .card-deck .card img {
             object-fit: cover;
@@ -21,11 +21,11 @@
                 <div class="col-lg-3 mb-5 pb-5">
                     <h2 class="text-white mt-5">
                         <small style="text-decoration: underline">for everyone:</small>
-                        <div>Build websites</div>
+                        <div>Instant websites</div>
                         <div>and web apps.</div>
                         <div>Without Coding !</div>
                     </h2>
-                    <p class="lead text-white">Get started in minutes with our many examples, easy to customize and combine.
+                    <p class="lead text-white">Get started in minutes with our many templates, easy to customize and combine.
                         </p>
                     <div class="btn-wrapper">
                         <a href="#EXAMPLES" class="btn btn-success btn-icon mb-3 mb-sm-0" style="text-transform: none">
@@ -33,9 +33,9 @@
                     </div>
                 </div>
                 <div class="col-lg-7">
-                    <img src="/formuladb-env/frmdb-apps/formuladb-io/static/images/header.svg" alt="FormulaDB - All in one digital transformation platform" class="m-n4">
+                    <img src="/formuladb-env/frmdb-apps/formuladb-io/static/images/header.svg" alt="FormulaDB - All in one digital transformation platform" class="m-n0">
                 </div>
-                <div class="col-lg-2 mb-5 pb-5">
+                <div class="col-lg-2 mt-3">
                     <div>
                         <small>
                             <u class="text-white">for developers:</u>
@@ -52,7 +52,7 @@
                             <u class="text-white">for web designers:</u>
                         </small>
                         <p>
-                            <small class="text-white">bring your designs to life as functional websites or apps
+                            <small class="text-white">bring your designs to life as fully functional web apps
                                 <br>
                             </small>
                         </p>
@@ -64,6 +64,17 @@
                         </small>
                         <p>
                             <small class="text-white">get an edge with custom KPIs and dashboards unique to your business
+                                <br>
+                            </small>
+                        </p>
+                        <div class="btn-wrapper"></div>
+                    </div>
+                    <div>
+                        <small>
+                            <u class="text-white">for startups:</u>
+                        </small>
+                        <p>
+                            <small class="text-white">move fast with no-code + low-code
                                 <br>
                             </small>
                         </p>
