--- a/git/formuladb-env/frmdb-apps/restaurant/_nav.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/_nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar" data-frmdb-fragment="_nav.html">
 <a class="navbar-brand" href="index.html">
     <frmdb-icon id="frmdb-nav-favicon" name="fontawesome-solid-images-album-landscape-photo-picture"></frmdb-icon>
-    <span>BrandName</span>
+    <span>Lux Restaurant</span>
 </a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
