--- a/git/formuladb-env/frmdb-apps/restaurant/local-restaurant.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/local-restaurant.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>FormulaDB Themes</title>
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="frmdb_display_date" content="">
 </head>
 <body data-frmdb-theme="Comfort" class="frmdb-editor-preview frmdb-editor-normal" style="opacity: 1;">
-    <frmdb-t-main-nav class="container bg-white fixed-top shadow">
+    <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/vegetarian-restaurant/static/57e0d0434253af14f6da8c7dda79367f1c37dfe752506c4870277bd7964ac258b1_1280.jpg&quot;);">
-        <frmdb-t-main>
-            <div class="jumbotron w-100 text-center bg-transparent" style="color: rgb(128, 128, 128);">
+    <frmdb-t-cover class="d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e0d0434253af14f6da8c7dda79367f1c37dfe752506c4870277bd7964ac258b1_1280.jpg&quot;);">
+        <frmdb-t-main class="">
+            <div class="jumbotron" style="color: rgb(128, 128, 128);">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
-                <h1 class="display-4" data-i18n="en">great Restaurant</h1>
+                <h1 class="display-4" data-i18n="en">great local restaurant</h1>
                 <p>Lead paragraph providing a short introduction to you website or app,
                     <br>it would be good to keep it under two lines of text
                 </p>
@@ -20,7 +23,7 @@
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto" data-i18n="en">order online</a>
             </div>
         </frmdb-t-main>
-        <frmdb-t-aside></frmdb-t-aside>
+        <frmdb-t-aside class=""></frmdb-t-aside>
     </frmdb-t-cover>
     <div data-frmdb-fragment="_form.html"></div>
     <section class="container py-5 text-center" style="color: rgb(128, 128, 128);">
@@ -30,7 +33,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/vegetarian-restaurant/static/55e0d544495ba914f6da8c7dda79367f1c37dfe752506c4870277bd6944cc25ab0_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/55e0d544495ba914f6da8c7dda79367f1c37dfe752506c4870277bd6944cc25ab0_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <h2 data-i18n="en">neapolitan pizza</h2>
@@ -49,15 +52,15 @@
                 <a class="btn btn-primary mx-auto" href="javascript:void(0)" data-i18n="en">read more -&gt;</a>
             </div>
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/vegetarian-restaurant/static/57e9d4474b51ac14f6da8c7dda79367f1c37dfe752506c4870277bd6944cc15bbd_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/57e9d4474b51ac14f6da8c7dda79367f1c37dfe752506c4870277bd6944cc15bbd_640.jpg" alt="...">
             </div>
         </div>
     </section>
-    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/vegetarian-restaurant/static/54e5dd464d5bad14f6da8c7dda79367f1c37dfe752506c4870277bd7964ac359ba_1280.jpg&quot;); background-color: rgb(255, 255, 255);">
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/54e5dd464d5bad14f6da8c7dda79367f1c37dfe752506c4870277bd7964ac359ba_1280.jpg&quot;); background-color: rgb(255, 255, 255);" class="">
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="container">
             <div class="row">
-                <div class="jumbotron col-md-5 w-100 text-center bg-transparent">
+                <div class="jumbotron col-md-5">
                     <h2 data-i18n="en" style="color: rgb(255, 255, 255);">our story</h2>
                     <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at,
                         tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
@@ -70,7 +73,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/vegetarian-restaurant/static/57e8d0474856a914f6da8c7dda79367f1c37dfe752506c4870277bd6944cc05bbe_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/57e8d0474856a914f6da8c7dda79367f1c37dfe752506c4870277bd6944cc05bbe_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <h2 data-i18n="en">Italian specialties</h2>
@@ -89,14 +92,14 @@
                 <a class="btn btn-primary mx-auto" href="javascript:void(0)" data-i18n="en">Read more here -&gt;</a>
             </div>
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/vegetarian-restaurant/static/54e8d6474f56a514f6da8c7dda79367f1c37dfe752506c4870277bd6944ccd58b8_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/54e8d6474f56a514f6da8c7dda79367f1c37dfe752506c4870277bd6944ccd58b8_640.jpg" alt="...">
             </div>
         </div>
     </section>
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/vegetarian-restaurant/static/57e8d64a4b51a814f6da8c7dda79367f1c37dfe752506c4870277bd69444c65fb1_640.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/57e8d64a4b51a814f6da8c7dda79367f1c37dfe752506c4870277bd69444c65fb1_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <h2 data-i18n="en">specialty coffee &amp; handmade raw cookies</h2>
@@ -109,6 +112,7 @@
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
 </html>
 </html>
