--- a/git/formuladb-env/frmdb-apps/restaurant/luxurious-restaurant.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/luxurious-restaurant.html
@@ -12,9 +12,9 @@
     </frmdb-t-main-nav>
     <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/52e4dc4a4f50b108f5d08460c6293e76143ddfe44e507441732d7cd79049c1_1280.jpg&quot;);" class="">
         <frmdb-t-main class="">
-            <div class="jumbotron">
-                <h6>Subtitle of app, can be a bit longer in words</h6>
-                <h1 class="display-4">Title of web app</h1>
+            <div class="jumbotron col-12 col-lg-8">
+                <h6 class="text-white">Subtitle of app, can be a bit longer in words</h6>
+                <h1 class="display-4 text-white" style="">Luxury Fine Dining</h1>
                 <p>Lead paragraph providing a short introduction to you website or app,
                     <br>it would be good to keep it under two lines of text
                 </p>
@@ -156,7 +156,7 @@
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
-                    <h2 id="mediasectionminorleft">Section Heading</h2>
+                    <h2 id="mediasectionminorleft" class="text-white">Section Heading</h2>
                     <p>Etiam porta magna eu rutrum rhoncus. Sed ut tempor nibh. Nullam tempus egestas ullamcorper. Proin sollicitudin diam vel risus egestas, in
                         fringilla ligula finibus.</p>
                     <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
@@ -176,7 +176,7 @@
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
-                    <h2 id="mediasectionminorright">Section Heading</h2>
+                    <h2 id="mediasectionminorright" class="text-white">Section Heading</h2>
                     <p>Pretium quis neque a faucibus. Quisque tempus pharetra tellus, sed molestie velit mattis ut. Suspendisse feugiat ligula dui, at
                         convallis turpis auctor et. Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula.</p>
                     <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
@@ -190,7 +190,7 @@
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
-                    <h2 id="mediasectionminorleft">Section Heading</h2>
+                    <h2 id="mediasectionminorleft" class="text-white">Section Heading</h2>
                     <p>Etiam porta magna eu rutrum rhoncus. Sed ut tempor nibh. Nullam tempus egestas ullamcorper. Proin sollicitudin diam vel risus egestas, in
                         fringilla ligula finibus.</p>
                     <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
@@ -213,6 +213,7 @@
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
 </html>
 </html>
