--- a/git/formuladb-env/frmdb-apps/restaurant/pizza-time.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/pizza-time.html
@@ -2,44 +2,46 @@
 <html lang="en">
 <head>
     <title>FormulaDB Themes</title>
-    <meta name="author" content="">
+    <meta name="author" content="alex">
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
 </head>
-<body class="frmdb-editor-normal">
+<body class="frmdb-editor-normal" data-fr="" data-frmdb-record="Restaurant_Order~~$AUTOID">
     <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/52e9d0444c55a514f6da8c7dda2936771d3edce4524c704c7d2979d3954ec05a_1280.jpg&quot;);   background-position: center center, center center, center bottom;" class="">
+    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/55e0d544495ba914f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" class="">
         <frmdb-t-main class="">
-            <div class="jumbotron">
+            <div class="jumbotron col-12 col-lg-8">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
-                <h1 class="display-4" contenteditable="true" spellchecker="false">Breaking Bread</h1>
+                <h1 class="display-4">PIZZA TIME</h1>
                 <p>Lead paragraph providing a short introduction to you website or app,
                     <br>it would be good to keep it under two lines of text
                 </p>
-                <a href="javascript:void(0)" class="btn btn-primary mx-auto">Call To Action</a>
+                <a href="order.html" class="btn btn-primary mx-auto">Menu</a>
             </div>
         </frmdb-t-main>
-        <frmdb-t-aside class=""></frmdb-t-aside>
+        <frmdb-t-aside class="" data-frmdb-record="Restaurant_Order~~$AUTOID">
+            <div data-frmdb-fragment="_form.html"></div>
+        </frmdb-t-aside>
         <frmdb-t-section-divider></frmdb-t-section-divider>
     </frmdb-t-cover>
     <section class="frmdb-section-light container py-5">
-        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="text-center mb-5">
-            <h2 id="thememediacards">Cards with Images</h2>
+            <h2 id="thememediacards">Menu</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <frmdb-t-card-deck class="frmdb-cards-4">
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e2dd424a57af14f6da8c7dda2936771d3edce4524c704c7d2979d3924bcd5c_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/52e8d544425aa814f6da8c7dda2936771d3edce4524c704c7d2979d2924ec35f_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
-                    <h5 class="">Card 1 title</h5>
-                    <h6 class="">Card 1 subtitle</h6>
-                    <p class="">Quisque ornare, quam a blandit malesuada</p>
+                    <h5>NEW Pizza</h5>
+                    <h6>Card 1 subtitle</h6>
+                    <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <frmdb-t-card-action class="">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="order.html" class="">Order</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
                     <span>INFO 
@@ -48,14 +50,14 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e0d4454954b108f5d08460c6293e76143ddfe44e507441732d7cd19545c6_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/5fe4d6414e57b108f5d08460c6293e76143ddfe44e507441732d7dd1964dc5_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
-                    <h5 class="">Card 2 title</h5>
-                    <h6 class="">Card 2 subtitle</h6>
-                    <p class="">Integer sit amet nisi viverra, pharetra nibh</p>
+                    <h5>Handmade</h5>
+                    <h6>Card 2 subtitle</h6>
+                    <p>Integer sit amet nisi viverra, pharetra nibh</p>
                 </div>
                 <frmdb-t-card-action class="">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="order.html" class="">Order</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
                     <span>INFO 
@@ -64,14 +66,14 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/54e3d4404e54ae14f6da8c7dda2936771d3edce4524c704c7d2979d3924fcd5b_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/52e6dd434f57ad14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
-                    <h5 class="">Card 3 title</h5>
-                    <h6 class="">Card 3 subtitle</h6>
-                    <p class="">Curabitur suscipit, massa eu maximus fringilla</p>
+                    <h5>Fresh ingredients</h5>
+                    <h6>Card 3 subtitle</h6>
+                    <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
                 <frmdb-t-card-action class="">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="order.html" class="">Order</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
                     <span>INFO 
@@ -80,14 +82,14 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e4d6404f53a514f6da8c7dda2936771d3edce4524c704c7d2979d3924bc05f_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e3d4444c5ba514f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
-                    <h5 class="">Card 4 title</h5>
-                    <h6 class="">Card 4 subtitle</h6>
-                    <p class="">Etiam porta magna eu rutrum rhoncus</p>
+                    <h5>Party Pizza</h5>
+                    <h6>Card 4 subtitle</h6>
+                    <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
                 <frmdb-t-card-action class="">
-                    <a href="javascript:void(0)" class="">Action</a>
+                    <a href="order.html" class="">Order</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
                     <span>INFO 
@@ -96,10 +98,10 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
         </frmdb-t-card-deck>
-        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
     </section>
-    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/5fe4d6414e57b108f5d08460c6293e76143ddfe44e507441732d7cd19545c6_1280.jpg&quot;);" class="">
-        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e3d1474d50ac14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" class="frmdb-bg-2 frmdb-bg-2-dark-solid-tint-50">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="container py-5">
             <div class="row py-5">
                 <div class="jumbotron col-md-5">
@@ -110,13 +112,13 @@
                 </div>
             </div>
         </div>
-        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
     </frmdb-t-media-section-main>
     <section class="frmdb-section-light container">
-        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/5ee2d4464a51b108f5d08460c6293e76143ddfe44e507441732d7cd19545c6_1280.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/54e5dd4a4f55a914f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
@@ -127,12 +129,12 @@
                 </div>
             </div>
         </div>
-        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
     </section>
-    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e8d34b495baa14f6da8c7dda2936771d3edce4524c704c7d2979d3924ecd59_1280.jpg&quot;);" class="">
-        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/55e2dc464851b108f5d08460c6293e76143ddfe44e507441732d7dd1964dc5_1280.jpg&quot;);" class="">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
-            <h2 id="themeiconcards">Cards with Icons</h2>
+            <h2 id="themeiconcards">PIZZA DELIVERED TO YOUR DOORSTEP</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
         </div>
         <div class="container">
@@ -156,32 +158,13 @@
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="">
-                    <h4>
-                        <frmdb-icon name="fontawesome-solid-tv-computer-display-monitor-television"></frmdb-icon> TV
-                    </h4>
-                    <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
-                </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="">
-                    <h4>
-                        <frmdb-icon name="fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor"></frmdb-icon> Drinks
-                    </h4>
-                    <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
-                    </p>
-                </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="">
-                    <h4>
-                        <frmdb-icon name="fontawesome-solid-building-apartment-business-city-company-office-work"></frmdb-icon> Building
-                    </h4>
-                    <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
-                        tempus.</p>
-                </frmdb-t-card-icon-main>
             </div>
+            <a class="btn btn-primary w-100" href="javascript:void(0)">ORDER ONLINE</a>
         </div>
-        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
     </frmdb-t-section-cards-icon>
     <section class="frmdb-section-light container py-5 my-5">
-        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
@@ -192,16 +175,37 @@
                 </div>
             </div>
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/52e0d240495baf14f6da8c7dda2936771d3edce4524c704c7d2979d39248c358_1280.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/52e2dd414b54a514f6da8c7dda2936771d3edce4524c704c7d2979d2924ec35f_1280.jpg" alt="...">
             </div>
         </div>
-        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
     </section>
     <frmdb-t-section-divider></frmdb-t-section-divider>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
     <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
 </html>
 </html>
