--- a/git/formuladb-env/frmdb-apps/restaurant/_head.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/_head.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="./formuladb-look.css">
 <link rel="icon" href="./favicon.svg">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
-<meta name="author" content="">
+<meta name="author" content="alex">
 <meta name="description" content="">
 <meta name="frmdb_display_date" content="">
 </head>
