added specific look per page

--- a/git/formuladb-env/frmdb-apps/restaurant/luxurious-restaurant.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/luxurious-restaurant.html
@@ -5,6 +5,11 @@
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
+    <meta name="frmdb_featured_page_order" content="">
+    <meta name="frmdb_look" content="lux">
+    <meta name="frmdb_primary_color" content="ffc208">
+    <meta name="frmdb_secondary_color" content="353b41">
+    <meta name="frmdb_theme" content="Frames">
 </head>
 <body class="frmdb-editor-normal">
     <frmdb-t-main-nav class="">
