--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -34,13 +34,17 @@
 
             </div>
 
-            <div class="btn-group mr-3" role="group">
-                <button class="btn btn-light" title="Save Page & Update App default look & feel" id="save-btn">
+            <div class="btn-group dropdown frmdb-dropdown-hover" data-frmdb-select="i" role="menu">
+                <button class="btn btn-light" title="Save Page">
                     <i class="frmdb-i-save"></i>
                 </button>
-                <button class="btn btn-light" title="Save Page, don't update default app look & feel" id="save-btn-single-page">
-                    <i class="frmdb-i-607806-save"></i>
-                </button>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="screen-size-dropdown-toggle">
+                    <a id="save-btn" class="dropdown-item">Save Page & Update App default look & feel</a>
+                    <a id="save-btn-single-page" class="dropdown-item">Save Page with specific look & feel</a>
+                </div>
+            </div>
+
+            <div class="btn-group mr-3" role="group">
                 <a href="./index.html" target="_blank" class="btn btn-light" title="Go To App In Different tab" id="publish-btn" data-frmdb-action="saveApp">
                     <i class="frmdb-i-upload"></i>
                 </a>
